learnt how to use table view

--- a/learningTableView/Base.lproj/Main.storyboard
+++ b/learningTableView/Base.lproj/Main.storyboard
@@ -1,25 +1,83 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="learningTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K9w-ID-zZn">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="60" id="33v-Jq-zWb" customClass="TsumCellTableViewCell" customModule="learningTableView" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="33v-Jq-zWb" id="C9g-jA-ASU">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UUl-wr-SMQ">
+                                                    <rect key="frame" x="8" y="-4" width="75" height="67"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="UUl-wr-SMQ" secondAttribute="height" multiplier="1:1" id="GqN-Ga-qbu"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMf-6S-5JD">
+                                                    <rect key="frame" x="103" y="19" width="115" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="NMf-6S-5JD" secondAttribute="trailing" constant="94" id="7vU-oF-PYJ"/>
+                                                <constraint firstItem="UUl-wr-SMQ" firstAttribute="top" secondItem="C9g-jA-ASU" secondAttribute="top" constant="5" id="EiR-7e-e38"/>
+                                                <constraint firstItem="NMf-6S-5JD" firstAttribute="centerY" secondItem="UUl-wr-SMQ" secondAttribute="centerY" id="Phw-5H-chS"/>
+                                                <constraint firstItem="UUl-wr-SMQ" firstAttribute="leading" secondItem="C9g-jA-ASU" secondAttribute="leading" constant="5" id="jvg-Oq-1Kj"/>
+                                                <constraint firstAttribute="bottom" secondItem="UUl-wr-SMQ" secondAttribute="bottom" constant="5" id="yCK-7b-dAm"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="dwarfFace" destination="UUl-wr-SMQ" id="ZSf-dF-6kk"/>
+                                            <outlet property="dwarfName" destination="NMf-6S-5JD" id="h1x-h7-2YI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="txs-CC-8tf"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="K9w-ID-zZn" secondAttribute="bottom" id="cjx-CF-rgD"/>
+                            <constraint firstAttribute="trailing" secondItem="K9w-ID-zZn" secondAttribute="trailing" id="on4-5p-UYL"/>
+                            <constraint firstItem="K9w-ID-zZn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wYy-ni-uqq"/>
+                            <constraint firstItem="K9w-ID-zZn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ziI-9l-W5a"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="K9w-ID-zZn" id="Z5L-Zr-NHI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="362" y="405"/>
         </scene>
     </scenes>
 </document>
